--- a/style.css
+++ b/style.css
@@ -1,34 +1,65 @@
 body {
-    background: red; /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(black, white); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(black, white); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(black, white); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(black, white); /* Standard syntax */
+    background: red;
+    /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(white, blue);
+    /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(white, blue);
+    /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(white, blue);
+    /* For Firefox 3.6 to 15 */
+    background: linear-gradient(white, blue);
+    /* Standard syntax */
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
 
-#display {
-	padding: 5px;
+main {
+    flex: 1 0 auto;
 }
 
-.numbercard {
-	color: white;
-	padding: 10px;
+.nav-wrapper .page-footer {
+    background-color: blue;
 }
 
-.card {
-	margin: 1px;
+button {
+    border-style: solid;
+    border-width: 3px;
+    border-color: black;
 }
 
+#outside {
+/*    transform: rotate(90deg);
+*/   display: flex;
+    float: left;
+}
+
+.input-field input[type=date]:focus+label,
+.input-field input[type=text]:focus+label,
+.input-field input[type=email]:focus+label,
+.input-field input[type=password]:focus+label {
+    color: #e91e63;
+}
+
+.input-field input[type=date]:focus,
+.input-field input[type=text]:focus,
+.input-field input[type=email]:focus,
+.input-field input[type=password]:focus {
+    border-bottom: 2px solid #e91e63;
+    box-shadow: none;
+}
+
+#dropdown1 {
+    left: 30px;
+}
+
+#redSpins {
+    color: red;
+}
+
+#blackSpins {
+    color: black;
+}
 #payoutRules {
 	text-align: center;
-}
-
-#dropdown #dropdown1{
-    display: none;
-    width: 100%;
-}
-
-#dropdown:hover + #dropdown1,#dropdown1:hover{
-    display: block;
-    z-index: 30;
 }
