--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body {
     background: red;
     /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(white, blue);
+    background: -webkit-linear-gradient(white, black);
     /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(white, blue);
+    background: -o-linear-gradient(white, black);
     /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(white, blue);
+    background: -moz-linear-gradient(white, black);
     /* For Firefox 3.6 to 15 */
-    background: linear-gradient(white, blue);
+    background: linear-gradient(white, black);
     /* Standard syntax */
     display: flex;
     min-height: 100vh;
